# hiperautomacao

./: README.md  pyproject.toml
app/: autorizar.py  main.py  robo.py
app/utils/: __init__.py  camoufox.py
app/utils/browser/: __init__.py
app/utils/dto/: __init__.py  params.py
app/utils/server/: __init__.py
app/utils/server/exc_handlers/: __init__.py  erro_generico.py  erro_parametro.py
app/utils/server/exceptions/: __init__.py  parametros.py
