[tool.poetry]
name = "hiperautomacao"
version = "0.1.0"
description = ""
authors = ["Vinicius Santos <viniciusdafonseca2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
uvloop = "^0.21.0"
bs4 = "^0.0.2"
loguru = "^0.7.3"
camoufox = {extras = ["geoip"], version = "^0.4.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
